err/unpyclib.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/unpyclib'...
Compiling './lib/python3.5/site-packages/unpyclib/application.py'...
***   File "./lib/python3.5/site-packages/unpyclib/application.py", line 130
    print __copyright
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/unpyclib/ast.py'...
***   File "./lib/python3.5/site-packages/unpyclib/ast.py", line 463
    return `self.value`
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/unpyclib/decompile.py'...
***   File "./lib/python3.5/site-packages/unpyclib/decompile.py", line 1067
    print '---> stack: '
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/unpyclib/disasm.py'...
***   File "./lib/python3.5/site-packages/unpyclib/disasm.py", line 296
    print 'STRANGE ABSOLUTE JUMP!!!'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/unpyclib/gui.py'...
***   File "./lib/python3.5/site-packages/unpyclib/gui.py", line 48
    print 'called the callback!'
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/unpyclib/opcodes.py'...
***   File "./lib/python3.5/site-packages/unpyclib/opcodes.py", line 405
    print '<html><head><style>table,td {border-width:1px;' \
                                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/unpyclib/parse.py'...
***   File "./lib/python3.5/site-packages/unpyclib/parse.py", line 98
    print 'Please redefine this method!'
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/unpyclib/structure.py'...
***   File "./lib/python3.5/site-packages/unpyclib/structure.py", line 823
    print '# Err: no modules for drawing graphs found... try:'
                                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/unpyclib-0.8.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
